Fixed Spring Boot starter issues.